# Chip8-Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Chip8.cpp  Chip8.h  README.md  main.cpp  vcpkg.json
src/: main.cpp
